commands, bug grocerylist, tab impprovement